# deepfunding-agent

./: .env.example  README.md  deepfunding.py  mini-contest.ipynb  oso_forks_and_funding_weighting.ipynb  pyproject.toml  requirements.txt  writeup.md
graph/weighting_examples/: oso_forks_and_funding_weighted_graph.json
mini-contest/: dataset-agent.csv
prompts/: analyzer.py  validator.py
tests/: test_utils.py
tools/: comparison.py  consensus.py  data_collection.py  search.py  validation.py
