[project]
name = "deepfunding-agent"
version = "0.1.0"
description = "AI Agent to solve funding public goods, specifically for deepfunding.org"
authors = [
    {name = "backdoor",email = "20609724+doutv@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "langgraph (>=0.2.61,<0.3.0)",
    "langchain-openai (>=0.2.14,<0.3.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "ipython (>=8.31.0,<9.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "numpy (>=1.22.4,<3.0.0)",
    "networkx (>=3.4.2,<4.0.0)",
    "langchain-community (>=0.3.14,<0.4.0)",
    "pygithub (>=2.5.0,<3.0.0)",
    "scipy (>=1.15.1,<2.0.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
